<resources>
    <string name="app_name">TheResolvers</string>
    <string name="exito">¡Has ganado!</string>
    <string name="next">¡Bravo!</string>
    <string name="reiniciar">¿Empezamos de nuevo?</string>
    <string name="ok">Ok</string>
    <string name="salir">Salir</string>
    <string name="complete">Completo</string>
    <string name="tips"></string>
    <string name="comenzar">Comenzar</string>
    <string name="aceptas_el_reto">¿Aceptas el reto?</string>
    <string name="title">TheResolvers</string>
    <string name="url_ayuda">https://github.com/marcss7/P8_Puzzle</string>
    <string name="scores"></string>
    <string name="textview">Nivel Fecha \u0020\u0020\u0020\u0020\u0020Mejor t(s)</string>
</resources>
